# wabbitry-receipt

./: .gitignore  .pre-commit-config.yaml  AGENT-NL.md  AGENT.md  README.md  pyproject.toml
data/: breeders.json  sample_sale.json
decisions/: 0001-template-engine.md  0002-data-model.md  0003-pydantic-schema-enforcement.md  0004-build-system-package-manager.md
decisions/pending/: 0002-data-model.md
docs/: design.md  impl.md  tooling.md
scripts/: check.sh  generate_interim.py  test.sh
src/wabbitry_receipt/: __init__.py  __main__.py  cli.py  models.py  pricing.py  renderer.py
src/wabbitry_receipt/templates/: receipt.css  receipt.html.j2
templates/: interim_receipt.md
tests/: conftest.py  test_cli.py  test_models.py  test_pricing.py  test_renderer.py
tests/fixtures/: sample_breeders.json  sample_sale.json
