[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wabbitry-receipt"
version = "0.1.0"
description = "Sales receipt generator for Wascally Wabbitry"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "weasyprint>=62",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
wabbitry-receipt = "wabbitry_receipt.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "ANN", "B", "UP", "S"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
